<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/itemIv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_image_black_24dp"
        android:contentDescription="@string/product_image"
        android:paddingRight="8dp"
        android:paddingEnd = "8dp"
        />
    <LinearLayout
        android:layout_gravity="center|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/priceTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_amount"
            android:textStyle="bold"
            android:textColor="@color/red_A400"
            android:textSize="20sp"/>

        <RatingBar
            android:id="@+id/rtBar"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:theme="@style/RatingBar_Yellow" />


        </LinearLayout>

</LinearLayout>

    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />
</RelativeLayout>