<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000">

    <TextView
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="30sp"/>

    <LinearLayout
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000">

        <TextView
            android:layout_margin="2dp"
            android:id="@+id/product_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <RatingBar
            android:id="@+id/rtBar"
            android:layout_margin="2dp"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RatingBar_Blue"
            style="?android:attr/ratingBarStyleSmall"/>

        <TextView

            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="#0000ff"
            android:id="@+id/rating_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/productImage"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:contentDescription="@string/product_image"
        android:layout_gravity="center_horizontal"/>



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:orientation="horizontal">
    <TextView
        android:padding="5dp"
        android:id="@+id/product_price"
        android:text="@string/amount"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:textColor="@color/red_500"
        android:textStyle="bold"
        android:textSize="45sp"/>

        <TextView
            android:id="@+id/availabilityTv"
            android:padding="5dp"
            android:layout_gravity="end"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/available"
            android:gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </LinearLayout>




    <TextView
        android:layout_marginLeft = "15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/productDescription"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_marginLeft = "15dp"
        android:layout_marginRight = "15dp"
        android:id="@+id/productLongDescription"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
       />

</LinearLayout>

</ScrollView>